--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent"> #00FFFFFF</color>
+    <color name="gray">#C4C3D0</color>
+    <color name="light_gray">#F1F1F1</color>
+    <color name="background_gray">#DD000000</color>
+    <color name="underline_gray">#020202</color>
 </resources>
