--- a/app/src/main/res/drawable/circle_border.xml
+++ b/app/src/main/res/drawable/circle_border.xml
@@ -9,14 +9,14 @@
 
 	<!-- View border color and width -->
 	<stroke
-		android:width="1sp"
+		android:width="1dp"
 		android:color="@color/black" >
 	</stroke>
 
 	<!-- The size -->
 	<size
-		android:height="42sp"
-		android:width="42sp" >
+		android:height="42dp"
+		android:width="42dp" >
 	</size>
 
 </shape>
