--- a/app/src/main/res/drawable/rectangle_rounded_border.xml
+++ b/app/src/main/res/drawable/rectangle_rounded_border.xml
@@ -9,13 +9,13 @@
 
 	<!-- View border color and width -->
 	<stroke
-		android:width="1sp"
+		android:width="1dp"
 		android:color="@color/black" >
 	</stroke>
 
 	<!-- The radius makes the corners rounded -->
 	<corners
-		android:radius="10sp"   >
+		android:radius="10dp"   >
 	</corners>
 
 </shape>
