--- a/app/src/main/res/layout/android_movie_details.xml
+++ b/app/src/main/res/layout/android_movie_details.xml
@@ -15,7 +15,7 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageView"
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_height="@dimen/poster_height"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,8 +38,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="58sp"
-            android:layout_height="17sp"
+            android:layout_width="58dp"
+            android:layout_height="17dp"
             app:layout_constraintStart_toStartOf="@id/cardView"
             app:layout_constraintTop_toTopOf="@id/cardView"
             android:layout_marginStart="@dimen/margin_20"
@@ -51,28 +51,31 @@
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/imageView2"
-            app:layout_constraintTop_toTopOf="@id/imageView2"
-            android:layout_marginStart="9sp"
-            android:layout_marginTop="1sp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="1dp"
             android:elevation="@dimen/elevation_default"
+            android:gravity="center_vertical"
             android:text="@string/genre_action_movie"
             android:textColor="@color/black"
             android:textSize="10sp"
-            android:textStyle="normal" />
+            android:textStyle="normal"
+            app:layout_constraintStart_toStartOf="@id/imageView2"
+            app:layout_constraintTop_toTopOf="@id/imageView2" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/imageView2"
-            app:layout_constraintTop_toTopOf="@id/cardView"
-            android:layout_marginStart="14sp"
-            android:layout_marginTop="@dimen/margin_32"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="32dp"
             android:elevation="@dimen/elevation_default"
+            android:gravity="center_vertical"
             android:text="@string/launch_date_wrath_of_man"
-            android:textColor="@color/black" />
+            android:textSize="12sp"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toEndOf="@id/imageView2"
+            app:layout_constraintTop_toTopOf="@id/cardView" />
 
         <TextView
             android:id="@+id/textView3"
@@ -81,7 +84,7 @@
             app:layout_constraintStart_toStartOf="@id/cardView"
             app:layout_constraintTop_toTopOf="@id/cardView"
             android:layout_marginStart="@dimen/margin_22"
-            android:layout_marginTop="63sp"
+            android:layout_marginTop="63dp"
             android:elevation="@dimen/elevation_default"
             android:text="@string/movie_name_wrath_of_man"
             android:textColor="@color/black"
@@ -94,7 +97,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="@id/cardView"
             app:layout_constraintTop_toTopOf="@id/cardView"
-            android:layout_marginTop="42sp"
+            android:layout_marginTop="42dp"
             android:layout_marginEnd="@dimen/margin_20"
             android:elevation="@dimen/elevation_default"
             android:contentDescription="@string/circle_border_name"
@@ -106,8 +109,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/imageView3"
             app:layout_constraintTop_toTopOf="@id/imageView3"
-            android:layout_marginTop="12sp"
-            android:layout_marginStart="10sp"
+            android:layout_marginTop="12dp"
+            android:layout_marginStart="10dp"
             android:elevation="@dimen/elevation_default"
             android:text="@string/age_restriction_18"
             android:textColor="@color/black"
@@ -121,7 +124,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/textView3"
             app:layout_constraintTop_toBottomOf="@id/textView3"
-            android:layout_marginTop="8sp"
+            android:layout_marginTop="8dp"
             android:elevation="@dimen/elevation_default"
             android:isIndicator="true"
             android:numStars="5"
@@ -133,7 +136,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_20"
-            android:layout_marginEnd="8sp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="@id/cardView"
             app:layout_constraintTop_toBottomOf="@id/ratingBar"
             app:layout_constraintEnd_toEndOf="@id/cardView"
@@ -151,7 +154,7 @@
             app:layout_constraintTop_toBottomOf="@id/textView5"
             android:elevation="@dimen/elevation_default"
             android:layout_marginStart="@dimen/margin_22"
-            android:layout_marginTop="35sp"
+            android:layout_marginTop="35dp"
             android:text="@string/title_actors"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -163,7 +166,7 @@
             app:layout_constraintStart_toStartOf="@id/cardView"
             app:layout_constraintTop_toBottomOf="@id/textView6"
             android:layout_marginStart="@dimen/margin_20"
-            android:layout_marginTop="16sp"
+            android:layout_marginTop="16dp"
             android:elevation="@dimen/elevation_default"
             android:scrollbars="none">
 
@@ -245,7 +248,7 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
-            android:layout_height="48sp"
+            android:layout_height="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:menu="@menu/bottom_nav_menu"
@@ -253,8 +256,8 @@
             app:itemBackground="@color/transparent" />
 
         <ImageView
-            android:layout_width="197sp"
-            android:layout_height="2sp"
+            android:layout_width="197dp"
+            android:layout_height="2dp"
             android:contentDescription="@string/underline"
             android:elevation="@dimen/elevation_underline"
             app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"
