--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,20 +3,20 @@
 
 	<style name="roundedImage" parent="">
 		<item name="cornerFamily">rounded</item>
-		<item name="cornerSize">30sp</item>
+		<item name="cornerSize">30dp</item>
 		<item name="color">@color/transparent</item>
 	</style>
 
 	<style name="roundedActorImage" parent="">
 		<item name="cornerFamily">rounded</item>
-		<item name="cornerSize">10sp</item>
+		<item name="cornerSize">10dp</item>
 		<item name="color">@color/transparent</item>
 	</style>
 
 	<style name="customRatingBar" parent="@android:style/Widget.RatingBar">
 		<item name="android:progressDrawable">@drawable/rating_stars</item>
-		<item name="android:minHeight">15sp</item>
-		<item name="android:maxHeight">15sp</item>
+		<item name="android:minHeight">15dp</item>
+		<item name="android:maxHeight">15dp</item>
 	</style>
 
 </resources>
