--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -3,7 +3,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/scrollView"
+    android:id="@+id/svMovieDetailsRoot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbars="none"
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content" >
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ivMovieDetailsPoster"
             android:layout_width="0dp"
             android:layout_height="@dimen/poster_height"
             android:scaleType="centerCrop"
@@ -26,7 +26,7 @@
             app:shapeAppearanceOverlay="@style/roundedImage" />
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
+            android:id="@+id/cvMovieDetailsCard"
             android:layout_width="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,11 +37,11 @@
             app:cardCornerRadius="@dimen/card_corner_radius" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/ivMovieDetailsGenreBorder"
             android:layout_width="58dp"
             android:layout_height="17dp"
-            app:layout_constraintStart_toStartOf="@id/cardView"
-            app:layout_constraintTop_toTopOf="@id/cardView"
+            app:layout_constraintStart_toStartOf="@id/cvMovieDetailsCard"
+            app:layout_constraintTop_toTopOf="@id/cvMovieDetailsCard"
             android:layout_marginStart="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_32"
             android:elevation="@dimen/elevation_default"
@@ -49,7 +49,7 @@
             app:srcCompat="@drawable/rectangle_rounded_border" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvMovieDetailsGenre"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="9dp"
@@ -60,11 +60,11 @@
             android:textColor="@color/black"
             android:textSize="10sp"
             android:textStyle="normal"
-            app:layout_constraintStart_toStartOf="@id/imageView2"
-            app:layout_constraintTop_toTopOf="@id/imageView2" />
+            app:layout_constraintStart_toStartOf="@id/ivMovieDetailsGenreBorder"
+            app:layout_constraintTop_toTopOf="@id/ivMovieDetailsGenreBorder" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvMovieDetailsReleaseDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
@@ -74,15 +74,15 @@
             android:text="@string/launch_date_wrath_of_man"
             android:textSize="12sp"
             android:textColor="@color/black"
-            app:layout_constraintStart_toEndOf="@id/imageView2"
-            app:layout_constraintTop_toTopOf="@id/cardView" />
+            app:layout_constraintStart_toEndOf="@id/ivMovieDetailsGenreBorder"
+            app:layout_constraintTop_toTopOf="@id/cvMovieDetailsCard" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tvMovieDetailsName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/cardView"
-            app:layout_constraintTop_toTopOf="@id/cardView"
+            app:layout_constraintStart_toStartOf="@id/cvMovieDetailsCard"
+            app:layout_constraintTop_toTopOf="@id/cvMovieDetailsCard"
             android:layout_marginStart="@dimen/margin_22"
             android:layout_marginTop="63dp"
             android:elevation="@dimen/elevation_default"
@@ -92,11 +92,11 @@
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/ivMovieDetailsAgeRestrictionBorder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@id/cardView"
-            app:layout_constraintTop_toTopOf="@id/cardView"
+            app:layout_constraintEnd_toEndOf="@id/cvMovieDetailsCard"
+            app:layout_constraintTop_toTopOf="@id/cvMovieDetailsCard"
             android:layout_marginTop="42dp"
             android:layout_marginEnd="@dimen/margin_20"
             android:elevation="@dimen/elevation_default"
@@ -104,11 +104,11 @@
             app:srcCompat="@drawable/circle_border" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tvMovieDetailsAgeRestriction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/imageView3"
-            app:layout_constraintTop_toTopOf="@id/imageView3"
+            app:layout_constraintStart_toStartOf="@id/ivMovieDetailsAgeRestrictionBorder"
+            app:layout_constraintTop_toTopOf="@id/ivMovieDetailsAgeRestrictionBorder"
             android:layout_marginTop="12dp"
             android:layout_marginStart="10dp"
             android:elevation="@dimen/elevation_default"
@@ -118,12 +118,12 @@
 
 
         <RatingBar
-            android:id="@+id/ratingBar"
+            android:id="@+id/rbMovieDetailsRating"
             style="@style/customRatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/textView3"
-            app:layout_constraintTop_toBottomOf="@id/textView3"
+            app:layout_constraintStart_toStartOf="@id/tvMovieDetailsName"
+            app:layout_constraintTop_toBottomOf="@id/tvMovieDetailsName"
             android:layout_marginTop="8dp"
             android:elevation="@dimen/elevation_default"
             android:isIndicator="true"
@@ -131,15 +131,15 @@
             android:rating="4" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/tvMovieDetailsAnnotation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_20"
             android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="@id/cardView"
-            app:layout_constraintTop_toBottomOf="@id/ratingBar"
-            app:layout_constraintEnd_toEndOf="@id/cardView"
+            app:layout_constraintStart_toStartOf="@id/cvMovieDetailsCard"
+            app:layout_constraintTop_toBottomOf="@id/rbMovieDetailsRating"
+            app:layout_constraintEnd_toEndOf="@id/cvMovieDetailsCard"
             android:elevation="@dimen/elevation_default"
             android:text="@string/description_wrath_of_man"
             android:textColor="@color/black"
@@ -147,11 +147,11 @@
             android:textStyle="normal" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tvMovieDetailsActorsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/cardView"
-            app:layout_constraintTop_toBottomOf="@id/textView5"
+            app:layout_constraintStart_toStartOf="@id/cvMovieDetailsCard"
+            app:layout_constraintTop_toBottomOf="@id/tvMovieDetailsAnnotation"
             android:elevation="@dimen/elevation_default"
             android:layout_marginStart="@dimen/margin_22"
             android:layout_marginTop="35dp"
@@ -163,8 +163,8 @@
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/cardView"
-            app:layout_constraintTop_toBottomOf="@id/textView6"
+            app:layout_constraintStart_toStartOf="@id/cvMovieDetailsCard"
+            app:layout_constraintTop_toBottomOf="@id/tvMovieDetailsActorsTitle"
             android:layout_marginStart="@dimen/margin_20"
             android:layout_marginTop="16dp"
             android:elevation="@dimen/elevation_default"
@@ -175,7 +175,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/imageView10"
+                    android:id="@+id/ivMovieDetailsFirstActorPortrait"
                     android:layout_width="@dimen/actor_portrait_width"
                     android:layout_height="@dimen/actor_portrait_height"
                     app:layout_constraintStart_toStartOf="parent"
@@ -184,7 +184,7 @@
                     android:contentDescription="@string/actor_portrait_jason_statham" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/tvMovieDetailsFirstActorName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/actor_name_margin_top"
@@ -192,21 +192,21 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/actor_name_text_size"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@id/imageView10"
-                    app:layout_constraintTop_toBottomOf="@id/imageView10" />
+                    app:layout_constraintStart_toStartOf="@id/ivMovieDetailsFirstActorPortrait"
+                    app:layout_constraintTop_toBottomOf="@id/ivMovieDetailsFirstActorPortrait" />
 
                 <ImageView
-                    android:id="@+id/imageView11"
+                    android:id="@+id/ivMovieDetailsSecondActorPortrait"
                     android:layout_width="@dimen/actor_portrait_width"
                     android:layout_height="@dimen/actor_portrait_height"
                     android:layout_marginStart="@dimen/actor_portrait_distance"
-                    app:layout_constraintStart_toEndOf="@id/imageView10"
+                    app:layout_constraintStart_toEndOf="@id/ivMovieDetailsFirstActorPortrait"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@mipmap/actor_holt_mccallany"
                     android:contentDescription="@string/actor_portrait_holt_mccallany" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/tvMovieDetailsSecondActorName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/actor_name_margin_top"
@@ -214,15 +214,15 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/actor_name_text_size"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@id/imageView11"
-                    app:layout_constraintTop_toBottomOf="@id/imageView11" />
+                    app:layout_constraintStart_toStartOf="@id/ivMovieDetailsSecondActorPortrait"
+                    app:layout_constraintTop_toBottomOf="@id/ivMovieDetailsSecondActorPortrait" />
 
                 <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/imageView12"
+                    android:id="@+id/ivMovieDetailsThirdActorPortrait"
                     android:layout_width="@dimen/actor_portrait_width"
                     android:layout_height="@dimen/actor_portrait_height"
                     android:layout_marginStart="@dimen/actor_portrait_distance"
-                    app:layout_constraintStart_toEndOf="@id/imageView11"
+                    app:layout_constraintStart_toEndOf="@id/ivMovieDetailsSecondActorPortrait"
                     app:layout_constraintTop_toTopOf="parent"
                     android:scaleType="centerCrop"
                     app:srcCompat="@mipmap/actor_josh_hartnett"
@@ -230,7 +230,7 @@
                     android:background="@color/cardview_light_background"/>
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/tvMovieDetailsThirdActorName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/actor_name_margin_top"
@@ -238,8 +238,8 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/actor_name_text_size"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@id/imageView12"
-                    app:layout_constraintTop_toBottomOf="@id/imageView12" />
+                    app:layout_constraintStart_toStartOf="@id/ivMovieDetailsThirdActorPortrait"
+                    app:layout_constraintTop_toBottomOf="@id/ivMovieDetailsThirdActorPortrait" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
