Create a window with a list of movies

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -9,10 +9,18 @@
 	<dimen name="margin_20">20dp</dimen>
 	<dimen name="margin_22">22dp</dimen>
 	<dimen name="margin_32">32dp</dimen>
+
+
 	<dimen name="actor_portrait_width">150dp</dimen>
 	<dimen name="actor_portrait_height">196dp</dimen>
 	<dimen name="actor_portrait_distance">10dp</dimen>
 	<dimen name="actor_name_margin_top">12dp</dimen>
 	<dimen name="actor_name_text_size">12sp</dimen>
+
+	<dimen name="bottom_bar_height">48dp</dimen>
+
+	<dimen name="item_genre_vertical_padding">3dp</dimen>
+	<dimen name="item_genre_horizontal_padding">9dp</dimen>
+	<dimen name="item_genre_end_margin">6dp</dimen>
 
 </resources>
