--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,10 @@
 		<item name="android:maxHeight">15dp</item>
 	</style>
 
+	<style name="customRatingBarSmall" parent="@android:style/Widget.RatingBar">
+		<item name="android:progressDrawable">@drawable/rating_stars_small</item>
+		<item name="android:minHeight">13dp</item>
+		<item name="android:maxHeight">13dp</item>
+	</style>
+
 </resources>
