--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -17,7 +17,7 @@
 		android:gravity="center"
 		tools:text="@string/genre_action_movie"
 		android:textColor="@color/black"
-		android:textSize="10sp"
+		android:textSize="@dimen/text_size_10"
 		android:textStyle="normal"
 		android:background="@drawable/rectangle_rounded_border"
 		android:paddingStart="@dimen/item_genre_horizontal_padding"
