--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content">
 
@@ -9,20 +9,20 @@
 		android:id="@+id/tvItemGenre"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
 		android:layout_marginEnd="@dimen/item_genre_end_margin"
+		android:background="@drawable/rectangle_rounded_border"
 		android:elevation="@dimen/elevation_default"
 		android:gravity="center"
-		tools:text="@string/genre_action_movie"
+		android:paddingStart="@dimen/item_genre_horizontal_padding"
+		android:paddingTop="@dimen/item_genre_vertical_padding"
+		android:paddingEnd="@dimen/item_genre_horizontal_padding"
+		android:paddingBottom="@dimen/item_genre_vertical_padding"
 		android:textColor="@color/black"
 		android:textSize="@dimen/text_size_10"
 		android:textStyle="normal"
-		android:background="@drawable/rectangle_rounded_border"
-		android:paddingStart="@dimen/item_genre_horizontal_padding"
-		android:paddingEnd="@dimen/item_genre_horizontal_padding"
-		android:paddingTop="@dimen/item_genre_vertical_padding"
-		android:paddingBottom="@dimen/item_genre_vertical_padding"/>
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:text="@string/genre_action_movie" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
