--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
@@ -9,86 +9,71 @@
 		android:id="@+id/ivMagnifyingGlass"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginTop="@dimen/margin_30"
+		android:layout_marginEnd="@dimen/margin_20"
+		android:contentDescription="@string/magnifying_glass"
+		android:elevation="@dimen/elevation_default"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		android:layout_marginEnd="@dimen/margin_20"
-		android:layout_marginTop="@dimen/margin_30"
-		android:elevation="@dimen/elevation_default"
-		android:contentDescription="@string/magnifying_glass"
 		app:srcCompat="@drawable/ic_magnifying_glass" />
 
 	<TextView
 		android:id="@+id/tvPopularTitle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
 		android:layout_marginStart="@dimen/margin_20"
 		android:layout_marginTop="@dimen/margin_75"
 		android:elevation="@dimen/elevation_default"
 		android:text="@string/popular_now"
 		android:textColor="@color/black"
 		android:textSize="@dimen/text_size_16"
-		android:textStyle="bold" />
+		android:textStyle="bold"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
 	<androidx.recyclerview.widget.RecyclerView
 		android:id="@+id/rvMovieListGenres"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:layout_marginStart="@dimen/margin_20"
+		android:layout_marginTop="@dimen/margin_10"
+		android:clipToPadding="false"
+		android:gravity="center"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/tvPopularTitle"
-		android:layout_marginStart="@dimen/margin_20"
-		android:layout_marginTop="@dimen/margin_10"
-		tools:listitem="@layout/item_genre"
-		android:gravity="center"
-		android:clipToPadding="false" />
+		tools:listitem="@layout/item_genre" />
 
 	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
 		android:id="@+id/swipeContainerMovieList"
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/rvMovieListGenres"
-		android:layout_marginEnd="@dimen/margin_10"
 		android:layout_marginStart="@dimen/margin_10"
 		android:layout_marginTop="@dimen/margin_20"
-		android:layout_marginBottom="@dimen/bottom_bar_height">
-
-	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/rvMovieList"
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:clipToPadding="false"
-		android:gravity="center_horizontal"
-		android:paddingBottom="@dimen/movie_list_padding_bottom"
+		android:layout_marginEnd="@dimen/margin_10"
+		android:layout_marginBottom="@dimen/bottom_bar_height"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/rvMovieListGenres"
-		tools:listitem="@layout/item_movie" />
+		app:layout_constraintTop_toBottomOf="@id/rvMovieListGenres">
+
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/rvMovieList"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:clipToPadding="false"
+			android:gravity="center_horizontal"
+			android:paddingBottom="@dimen/movie_list_padding_bottom"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/rvMovieListGenres"
+			tools:listitem="@layout/item_movie" />
 
 	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-	<com.google.android.material.bottomnavigation.BottomNavigationView
+	<include
 		android:id="@+id/movieListBottomNavigationView"
-		android:layout_width="match_parent"
-		android:layout_height="@dimen/bottom_bar_height"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:menu="@menu/bottom_nav_menu"
-		app:itemIconTint="@color/black"
-		app:itemBackground="@color/transparent" />
-
-	<ImageView
-		android:layout_width="@dimen/bottom_bar_underline_width"
-		android:layout_height="@dimen/bottom_bar_underline_height"
-		android:contentDescription="@string/underline"
-		android:elevation="@dimen/elevation_underline"
-		app:layout_constraintBottom_toBottomOf="@id/movieListBottomNavigationView"
-		app:layout_constraintStart_toStartOf="parent"
-		app:srcCompat="@drawable/line" />
+		layout="@layout/bottom_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
