--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="transparent"> #00FFFFFF</color>
-    <color name="gray">#C4C3D0</color>
-    <color name="light_gray">#F1F1F1</color>
-    <color name="background_gray">#DD000000</color>
-    <color name="underline_gray">#020202</color>
+	<color name="purple_200">#FFBB86FC</color>
+	<color name="purple_500">#FF6200EE</color>
+	<color name="purple_700">#FF3700B3</color>
+	<color name="teal_200">#FF03DAC5</color>
+	<color name="teal_700">#FF018786</color>
+	<color name="black">#FF000000</color>
+	<color name="white">#FFFFFFFF</color>
+	<color name="transparent">#00FFFFFF</color>
+	<color name="gray">#C4C3D0</color>
+	<color name="light_gray">#F1F1F1</color>
+	<color name="background_gray">#DD000000</color>
+	<color name="button_gray">#C4C4C4</color>
+	<color name="underline_gray">#020202</color>
 </resources>
