--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<dimen name="poster_height">290dp</dimen>
-	<dimen name="card_height">658dp</dimen>
+	<dimen name="poster_height">500dp</dimen>
+	<dimen name="poster_height_land">1000dp</dimen>
+	<dimen name="card_height">750dp</dimen>
+	<dimen name="card_height_land">600dp</dimen>
 	<dimen name="card_marginTop">236dp</dimen>
 	<dimen name="card_corner_radius">30dp</dimen>
 	<dimen name="elevation_default">2dp</dimen>
-	<dimen name="elevation_underline">8dp</dimen>
 
 	<dimen name="margin_8">8dp</dimen>
 	<dimen name="margin_10">10dp</dimen>
@@ -15,6 +16,7 @@
 	<dimen name="margin_35">35dp</dimen>
 	<dimen name="margin_40">40dp</dimen>
 	<dimen name="margin_60">60dp</dimen>
+	<dimen name="margin_70">70dp</dimen>
 	<dimen name="margin_75">75dp</dimen>
 
 	<dimen name="text_size_7">7sp</dimen>
@@ -26,8 +28,7 @@
 	<dimen name="text_size_20">20sp</dimen>
 
 	<dimen name="bottom_bar_height">50dp</dimen>
-	<dimen name="bottom_bar_underline_width">197dp</dimen>
-	<dimen name="bottom_bar_underline_height">2dp</dimen>
+	<dimen name="bottom_bar_underline_height">5dp</dimen>
 
 	<dimen name="actor_portrait_width">150dp</dimen>
 	<dimen name="actor_portrait_height">196dp</dimen>
@@ -46,7 +47,6 @@
 	<dimen name="item_movie_age_margin">2dp</dimen>
 
 	<dimen name="movie_list_padding_bottom">40dp</dimen>
-
 
 
 </resources>
