--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
 	<dimen name="margin_30">30dp</dimen>
 	<dimen name="margin_35">35dp</dimen>
 	<dimen name="margin_40">40dp</dimen>
+	<dimen name="margin_50">50dp</dimen>
 	<dimen name="margin_60">60dp</dimen>
 	<dimen name="margin_70">70dp</dimen>
 	<dimen name="margin_75">75dp</dimen>
