--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -35,7 +35,7 @@
 				android:id="@+id/cvMovieDetailsCard"
 				android:layout_width="match_parent"
 				android:layout_height="@dimen/card_height"
-				android:layout_marginTop="@dimen/card_marginTop"
+				android:layout_marginTop="@dimen/card_margin_top"
 				app:cardBackgroundColor="@color/light_gray"
 				app:cardCornerRadius="@dimen/card_corner_radius"
 				app:layout_constraintEnd_toEndOf="parent"
